# SDL3_template

./: .gitmodules  CMakeLists.txt
src/: main.c  vector.c
src/include/: vector.h
